[package]
name = "lumberjack"
version = "0.3.1"
authors = ["Sebastian Puetz <sebastian.puetz@student.uni-tuebingen.de>"]
edition = "2018"
description = "Read and modify constituency trees."
license = "Apache-2.0"
homepage = "https://github.com/sebpuetz/lumberjack"
repository = "https://github.com/sebpuetz/lumberjack"


[dependencies]
conllx = "0.12"
failure = "0.1"
fixedbitset = "0.2"
itertools = "0.8"
pest = "2"
pest_derive = "2"
petgraph = "0.5"